--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+2
+  dots_indicator: ^1.2.0
   fluttertoast: ^7.1.5
   connectivity: ^0.4.9
   xml: ^4.5.1
   xml2json: ^4.4.0
+  google_maps_flutter: ^0.5.32
+  geolocator: ^5.3.2+2
+  geocoder: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,9 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
